# cmake-simple-proj-w-lib

./: CMakeLists.txt  README.md
libs/my_lib/: CMakeLists.txt
libs/my_lib/include/my_lib/: add_one.hpp
libs/my_lib/src/: add_one.cpp  foo.cpp  foo.hpp
src/: main.cpp
